# ArchieOS-Backend

./: .env.example  .gitignore  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  QUICK_DEPLOY.sh  README.md  SETUP_REQUIRED.md  TESTING_SUMMARY.md  TEST_RESULTS.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  setup_vercel.sh  vercel.json
.github/workflows/: test.yml
api/: health.py
api/intake/: process.py
api/slack/: events.py
docs/: schema_mapping.md
src/: __init__.py
src/models/: __init__.py  activity.py  agent_task.py  classification.py  listing.py  realtor.py  slack_event.py  task.py
src/services/: debounce_buffer.py  intake_ingestor.py  slack_classifier.py  slack_dedup.py  slack_users.py  slack_verifier.py  supabase_client.py
src/utils/: errors.py  logging.py  logging_config.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_intake_schema.sql  003_integrate_backend.sql  004_missing_tables.sql
tests/: README.md  __init__.py  conftest.py  test_classification_model.py  test_integration.py  test_slack_dedup.py  test_slack_verifier.py
tests/fixtures/: __init__.py  classifications.py  slack_events.py
tests/integration/test_pipeline/: __init__.py  test_slack_to_database.py
tests/integration/test_supabase/: __init__.py
tests/test_api/: test_health_endpoint.py  test_slack_events_endpoint.py
tests/unit/test_models/: __init__.py  test_activity.py  test_agent_task.py  test_classification.py  (+1 more)
tests/utils/: __init__.py  assertions.py  factories.py  helpers.py
(+3 files in other folders)
